# Python-WebScraping

./: README.rst  pyproject.toml
proj_scraper/: __init__.py
proj_scraper/trabalha_brasil/: requisicoes.py  run.py
proj_scrapper/: __init__.py  requisicoes.py
tests/: test_proj_scrapper.py
