[tool.poetry]
name = "proj_scrapper"
version = "0.1.0"
description = ""
authors = ["mateusaffonso <mateusana@dcc.ufrj.br>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
playwright = "^1.45.1"
pytest = "^5.1"
numpy = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
